syntax = "proto3";

package hmls.agent;

// Agent service for running AI tasks
service AgentService {
  // Run a task and stream events back
  rpc RunTask(TaskRequest) returns (stream TaskEvent);
}

// Request to run a task
message TaskRequest {
  string message = 1;
  optional int32 conversation_id = 2;
}

// Streamed event from the agent
message TaskEvent {
  oneof event {
    TextDelta text_delta = 1;
    ToolStart tool_start = 2;
    ToolEnd tool_end = 3;
    Done done = 4;
    Error error = 5;
  }
}

// Text delta from the agent response
message TextDelta {
  string text = 1;
}

// Tool execution started
message ToolStart {
  string tool_name = 1;
}

// Tool execution ended
message ToolEnd {
  string tool_name = 1;
}

// Task completed
message Done {}

// Error occurred
message Error {
  string message = 1;
}
